--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,13 +14,54 @@ body {
     padding: 0;
 }
 
-.navbar .title-nav {
-    font-size: 14px;
+.navbar .navbar-nav {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.navbar .navbar-nav .nav-item {
+    display: flex;
+    align-items: center;
 }
 
 .navbar-nav .nav-item .nav-link {
-    padding: 5px 10px;
-    min-width: 70px;
+    display: flex;
+    background-color: transparent;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    text-align: center;
+    min-height: 52px;
+    min-width: 80px;
+}
+
+.navbar .title-nav {
+    font-size: 12px;
+}
+
+.navbar-nav .nav-link.active {
+    border-bottom: 2px solid #000;
+}
+
+.navbar-expand-lg .navbar-nav .dropdown-menu {
+    margin-top: 10px;
+    left: auto;
+    max-height: calc(100vh - 64px);
+    overflow-y: auto;
+    padding: 0;
+    right: 0;
+    width: 288px;
+    border-radius: 10px 0 10px 10px;
+}
+
+.dropdown-menu .dropdown-menu-sub .menu-sub .menu-sub-link a {
+    text-decoration: none;
+    font-size: 14px;
+    color: #4C585B;
+}
+
+.dropdown-menu .dropdown-menu-sub .menu-sub .menu-sub-link a:hover {
+    text-decoration: underline;
 }
 
 .navbar-mobile {
@@ -45,6 +86,11 @@ body {
 
 .filter {
     display: flex;
+}
+
+.sub-ads {
+    position: sticky;
+    top: 10%;
 }
 
 @media screen and (max-width: 768px) {
@@ -95,5 +141,9 @@ body {
 
     .reposts {
         display: none;
+    }
+
+    .navbar .title-nav {
+        font-size: 10px;
     }
 }
